--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 port = 9000
 connectionString = mongodb+srv://mustaphas902:fV1DiX9s9c5AULWZ@cluster0.rbazooc.mongodb.net/?retryWrites=true&w=majority
+scretkey=sdsadjghsdndbc
