--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 port = 9000
-connectionString = mongodb+srv://mustaphas902:fV1DiX9s9c5AULWZ@cluster0.rbazooc.mongodb.net/?retryWrites=true&w=majority
-scretkey=sdsadjghsdndbc
+connectionString = `mongodb+srv://sordyq:achievement1@cluster0.wezicd9.mongodb.net/blogs?retryWrites=true&w=majority`
