--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 port = 9000
-connectionString = `mongodb+srv://sordyq:achievement1@cluster0.wezicd9.mongodb.net/blogs?retryWrites=true&w=majority`
+connectionString = `mongodb+srv://sordyq:achievement1@cluster0.wezicd9.mongodb.net/gifted?retryWrites=true&w=majority`
