--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 port = 9000
-connectionString = `mongodb+srv://sordyq:achievement1@cluster0.wezicd9.mongodb.net/gifted?retryWrites=true&w=majority`
+connectionString = mongodb+srv://mustaphas902:fV1DiX9s9c5AULWZ@cluster0.rbazooc.mongodb.net/?retryWrites=true&w=majority
