--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-session": "^1.17.3",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
