--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 port = 9000
 connectionString = `mongodb+srv://sordyq:achievement1@cluster0.wezicd9.mongodb.net/gifted?retryWrites=true&w=majority`
-PAYSTACK_SECRETE_KEY = sk_test_b1ea335bbc2c211d2b8fd923c8520faa5e06000a
+SECRETE_KEY = sk_test_b1ea335bbc2c211d2b8fd923c8520faa5e06000a
 my_email = sordyq4242@gmail.com
 my_password = ncucskpgychvqbgj
